@@ -24,7 +24,7 @@ import java.io.Reader;
 import java.util.HashMap;
 import java.util.Set;
 
-import org.apache.lucene.analysis.BaseCharFilter;
+import org.apache.lucene.analysis.charfilter.BaseCharFilter;
 import org.apache.lucene.analysis.CharReader;
 import org.apache.lucene.analysis.CharStream;
 
